@@ -78,6 +78,9 @@ plugin.tx_bzdstaffdirectory_pi1 {
 		image {
 			file.maxW = 180
 			file.params =
+			popup.maxW = 800
+			popup.maxH = 
+			popup.params =
 		}
 	}
 	BOX  {
